<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">WZKD2</string>
    <string name="hello_world">Hello world!</string>
    <string name="zhinanwenzi">地点名称</string>
    <string name="huodongzhongxin">\t\t电子科技大学活动中心是电子科技大学专门为学生开展课外活动，以及学生事务处理而配置的 ，它背靠着清水河，顺着学校东大门进入学校，很快就能看见这栋美丽的建筑。每到一年新生季，来报到的新生和家长就会 聚集在学生活动中心一楼的园厅里办理报道手续，场面壮观。而每到招聘季的时候，也会有许许多多的企业选择来到活动中 心进行招聘宣讲，不管你是不是正在找工作的毕业生，都可以了解一下企业招聘的标准，制定好自己的发展计划。学生活动 中心还有着许许多多的学生服务单位，他们为同学们提供了诸如教室借用、奖助学金处理、创新创业咨询…多种服务。 为大家的日常事务处理提供了巨大的帮助。</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_jieshao">JieshaoActivity</string>
    <string name="title_activity_zhian">ZhianActivity</string>
    <string name="yishitang">\t\t一食堂在本科四组团对面，寝室在本科12，13，14，15这几栋楼的同学可以享有出门就是食堂的好待遇。一食堂有三层，其中有学子，思源，家园三个餐厅。食堂的开饭时间是早上6：00-9：00（食堂阿姨也很辛苦，早上天没亮就要开始准备），中午11：00-13：00,下午17：00-19：00，如果想吃饭不怎么排队的话可以选择早点到，中午11：30左右，下午17：30左右，这个时候大部分同学还在上课。还要注意的是，虽然时间持续两个小时，但是9：00、13：00、17：00到的话基本上也是没有什么可以吃的了，那么实在是有事耽误了怎么办呢？不要紧，三楼的家园餐厅一直营业到晚上22：00。</string>
    <string name="chengdianhuitang">\t\t成电会堂是电子科技大学清水河校区几乎所有的文艺活动的集散地，每年都会举办各种各样的文艺晚会与演出，演出从世界文明的《法语香颂》到同学们自导自演的话剧，应有尽有。</string>
    <string name="tushuguan">\t\t电子科技大学图书馆由沙河校区及清水河校区两个图书馆组成，馆舍总面积66974平方米，读者座位总数6600个，各类研修间98间。沙河校区图书馆创建于1956年，馆舍面积14974平方米，现由沙河阅览部作为沙河校区图书馆主要的对外服务窗口。清水河校区图书馆于地处校区中心位置，2009年6月建成并投入使用，建筑面积52000余平方米，作为主馆和沙河校区分馆并行使用。</string>
    <string name="xiaoyiyuan">\t\t电子科技大学医院始建于1956年，到今天已经走过 60年的风风雨雨。从医务室到现代化的医院，一路栉风沐雨、披荆斩棘，发展之路步履坚实，医者仁心传承不息。半个世纪的救死扶伤，三辈人的薪火相传，一代代“成电人”，用真挚的爱呵护着师生、患者的安康。电子科技大学医院作为学校直属正处级单位，已经成为一所集医疗、预防、保健、康复为一体的二级综合医院。系四川省高校保健医学研究会理事长单位，四川省教师资格证认证体检医院及成都市机动车驾驶员体检定点医院，同时也是四川省及成都市医保定点医院。医院建筑面积2.3万平米，由两个医院、两个医务室、一个社康中心构成。医院承担着校内6万师生、家属及校外周边社区居民3万人、富士康厂区10万人的医疗保健工作</string>
    <string name="yingxindadao">\t\t1600余株银杏树成为成都电子科大一道独特的风景线。为保留美景，自2004年起，成都电子科大就决定不再清扫掉落在草坪上的银杏树叶。在主楼东侧有一大片银杏树，到了深秋季节，银杏叶开始慢慢变黄，秋风一起，片片飞舞，十分美丽。</string>
    <string name="zhulou">\t\t电子科技大学清水河校区主楼正面长365米、高46.10米、总建筑面积达81350平方米电子科技大学清水河校区主楼工程位于四川省成都市高新技术开发区西区，是四川省高等学府电子科技大学标志性建筑，体量大，综合性强，功能性强，科技含量高，具有庄重、典雅的建筑风格，充分展现了现代高校的文化底蕴。2009年1月，正面长365米、高46.10米、总建筑面积达81350平方米，比老校主楼大三倍多的清水河校区（电子科技大学新校区）主楼拔地而起，新主楼内部设计和原主楼迥然不同，它融合了现代特色并进行了创新，但在文化内涵和体貌风格上却传承了原主楼。厚重、大气、典雅的新主楼代表的是成电人对原主楼的回忆，和对老成电精神的发扬光大。新主楼作为后起之秀，2010年11月获得中国建设工程最高奖——“鲁班奖”</string>
    <string name="keyanlou">\t\t清水河校区科研楼分为B区和C区，用于教学研究工作，是通信与信息工程学院和电子工程学院主要办公地。学院各组织机构以及各导师教研室都在此处设立。</string>
    <string name="pingxuelou">\t\t学楼是本科生上课的地点。A、B、C三栋高楼彼此串联，在空中俯瞰，俨然一个“品”字。这“品”不仅仅是一种造型，更是一种态度。它是电子科大教授老师们对科研教学的“品”、电子科大学子们求知笃学的“品”。</string>
    <string name="zhoubianluxian">116路：电子科大清水河——九里堤公交站 [07:00--19:30]\n乘车地点：电子科大清水河西门\n96路：电子科大南门（顺江小区）——金沙车站 [06:30--22:00]\n乘车地点：电子科大南门顺江小区内\n708路：合信路天盛路口站——犀浦公交[06:30--20:00]\n乘车地点：电子科技大学南门</string>
    <string name="shineichezhan">犀浦地铁站：乘坐711路、116路，在犀浦高铁站下车，进入犀浦地铁站即可乘坐地铁2号线\n火车北站：116路在九里堤公交站下转36路到火车北站下\n双流机场：96路在金沙车站下转318路（同学也可约好几人共同打的，平摊费用，省时省事。价格约80－100元）\n</string>
    <string name="shineigaoxiao">1.四川大学（望江校区）：96路在金沙车站下，转19路在四川大学下。约1小时50分钟\n2.四川大学（江安校区、华西校区、龙泉校区）：在四川大学望江校区乘校车到达\n3.西南交通大学（犀浦校区）：可骑车或坐电瓶车去\n4.西南交通大学（九里堤校区）：116路在九里堤公交站下，转36在九里堤中路北站下。约1小时20分钟\n5.西南财经大学（金沙校区）：96路在金沙车站下，步行至西南财经大学。约1小时10分钟\n6.西南财经大学（温江校区）：在西南财经大学本部坐校车到达\n7.四川师范大学（本部）：116路在九里堤公交站下，转56路在川师南大门下。约2小时\n8.四川师范大学（东区）：在川师本部坐校车。\n9.成都理工大学：坐校车到沙河校区，打的即可到达\n10.西南民族大学（武侯校区）：96路在金沙车站下，转19路在一环路南四段下，步行至西南民族大学。约1小时40分钟\n11.西南民族大学（航空港校区）：在西南民大本部坐校车到达。\n12.成都中医药大学：96路在金沙车站下，转81路在中医附院下，步行至成都中医药大学。约1小时20分钟\n13.成都体育学院：116路在金泉路下，转43路在中医附院下\n14.四川音乐学院：116路在全兴路下，转62路在磨子桥下。约1小时40分钟\n15.成都大学：96路在蜀汉路下，转341路在成洛路公交站下，步行至双庆路口，转80路在成都大学下。约2小时20分钟\n16.成都信息工程学院（人南校区）：96路在金沙车站下，转78路在人民南路三段北站下，步行至成都信息工程学院。约1小时40分钟</string>
    <string name="shinejingdian">1.锦里and武侯祠：116路在 九里堤公交站下，步行至 金府路口，转93路在锦里中路下；96路在黄忠小区下，转82路在武侯祠下；约1小时40分钟。\n2.植物园：116路在九里堤公交站下，转36路在火车北站公交站下；转9路区间在植物园下约1小时50分钟。\n3.动物园：116路在金府路西下，步行至长久村站，转403路在动物园下。约1小时30分钟。\n4.大慈寺：116路在茶店子西口下，转4路在大慈寺下。约1小时30分钟。\n5.望江公园：96路在何家桥下，转54路在一环路口下，转34路在九眼桥下。约1小时50分钟。\n6.文殊院：116路在九里堤公交站下，步行至金府路口转101路在江汉路东下。约1小时30分钟。\n7.青羊宫：96路在黄忠小区下，转88路在青羊宫下。约1小时20分钟。\n8.天府广场：116路在金泉路下，转43路到天府广场西侧下。约1小时20分钟。\n9.杜甫草堂：96路在金沙车站下，转901路在杜甫草堂下。约1小时30分钟。\n10.活水公园：坐校车到沙河校区，下车步行可到。约1小时30分钟。\n11.塔子山公园：96路在金沙车站下，转81路在塔子山公园下。约1小时50分钟。\n另外还有比较适合学生的旅游路线（部分不在市内）：九寨沟、黄龙，峨眉山、乐山大佛、海螺沟，四姑娘山，稻城、亚丁，西岭雪山，都江堰、青城山， 温江国色天香，洛带古镇等等。\n</string>
    <string name="zhuyi">以上乘车路线仅供参考,为方便同学出行，开学后清水河校区周边公交车路线会做出一些调整，但因条件有限，不完善之处在所难免,还请大家见谅!同时,我们也真诚欢迎同学们随时向学生会反馈相关公交信息。最后补充一点，其实城市交通查询有效的方法是打114号码百事通或拨打成都公交热线85076868，非常便利又不会出错!</string>
    <string name="qingchenshan">1、D6101成都开07:15，到青城山08:08；D6102青城山开08:15，到成都09:04。\n2、D6103成都开08:15，到青城山09:06；D6104青城山开09:20，到成都10:10。\n3、D6105成都开09:30，到青城山10:00；D6106青城山开10:15，到成都10:59。\n4、D6107成都开11:15，到青城山12:00；D6108青城山开13:40，到成都14:30。\n5、D6109成都开14:00，到青城山14:50；D6110青城山开15:05，到成都15:55。\n6、D6111成都开14:50，到青城山15:35；D6112青城山开15:50，到成都16:40。\n7、D6113成都开17:35，到青城山18:10；D6114青城山开18:20，到成都17:10。\n8、D6115成都开19:25，到青城山20:14；D6116青城山开20:30，到成都21:19。\n</string>
    <string name="dujiangyan">1、D6131成都开06:40，到都江堰07:07；D6132都江堰开07:17，到成都07:58。\n2、D6133成都开10:30，到都江堰11:06；D6134都江堰开11:16，到成都11:52。\n3、D6135成都开16:15，到都江堰16:42；D6136都江堰开16:52，到成都17:19。\n4、D6137成都开16:55，到都江堰17:36；D6138都江堰开17:46，到成都18:27。\n</string>
    <string name="xuezhang">对于大学，每个曾经经历或正在经历的人都会有不同的解读。或许你现在对大学生活有些迷茫和困惑，但听听过来人的建议与忠告或许能为迷茫中的你指明方向。下面为大家列出了学长们对大学生活的10条感悟，希望这些建议会给学弟学妹们一点启迪或收获。\n1.一定要有独立的人格、独立的思想。一个经过独立思考而坚持错误观点的人比一个不假思索而接受正确观点的人更值得肯定。\n2.仕途，商界，学术。大致说来，每个人都注定要走上三条路中的某一条。再进行职业生涯规划的时候，不妨以此作为思考的出发点。只有知道自己以后要做什么，才能知道自己应该学什么。\n3.专业无冷热，学校无高低。没有哪个用人单位会认为你代表了你的学校或者你的专业。千万不要以为你是热门专业的学生而沾沾自喜，也大可不必因为你的专业冷门而自卑。\n4.千招会，不如一招熟。十个百分之十并不是百分之百，而是零。如果你有十项工作，每项你都会做百分之十，那么，在用人单位眼中，你什么都不会。所以，你必须要有自己的核心竞争力。“通才”只有在“专才”的基础上才有意义。\n5.很多女生将电脑当作影碟机，很多男生将电脑当作游戏机。大学生要掌握必要的计算机操作能力，但是，很多时候电脑会成为浪费时间的堂而皇之的借口。有电脑的大学生非常多，可是，这中间很多人可能大学毕业的时候还不会Excel，不会做一个象样的PPT。\n6.做事不如做人，人脉决定成败。一个人有多少钱并不是指他拥有多少钱的所有权，而是指他拥有多少钱的使用权。一个人具备多少能力，不只是说他一个人的时候能做多少事，还包括他能通过别人做什么。一个人赚的钱，1/8是靠自身的知识，1/7则来自人脉关系。三十岁以前靠专业赚钱，三十岁以后拿人脉赚钱。所以请好好珍惜大学期间建立起来的人脉关系。这几年你认识的朋友可能是你毕业以后最宝贵的财富。\n7.互联网固然威力无穷，但是，如果你沉迷于网络聊天、网络游戏，浪费的金钱倒是可以弥补的，荒废的青春就无可追寻了。轻舞飞扬已经红颜薄命了，而痞子蔡却继续跟别的女孩发生着一次又一次的亲密接触。对于很多大学生而言，网吧就是一个血淋淋的黑洞。\n8.关于大学毕业后读研或就业的选择，应早做规划。作为工科全国名校，学校鼓励大家考研，为自己以后的职业生涯建立更高的起点。当然想毕业后直接工作的同学也应积极培养自己各种技能，不管怎么说，学好专业知识是读研和就业都需要的，没有一个高校或企业愿意招收一名微积分不及格的学生。\n9.对于有志向出国留学深造的同学，首先，应把眼光放远点，充分关注专业发展前景，认真考虑各国家的大学。其次，要认真规划大学四年，考GRE、考TOFEL都是困难并且枯燥的事，把成绩弄好也是同样重要的。近几年来，学校在不断加大国际交流学习，坚信一点，如果你优秀总会有机会垂青。\n10.大学期间一定要多去图书馆夺取自习室。虽然不是每本书看了都有用，但是，因为你不知道究竟哪本书以后会有用，所以要多看书，并且抛弃那些过于功利的想法。尽管网到鱼的不过是一个网眼，但要想捕到鱼，就必须要编制一张网。\n</string>
    <string name="zhuyaofuwuxinxi">图书馆对全校师生实行开放式图书资源借阅服务，主要阅览室每周开放98小时，图书馆主页日均访问量约3000人次。多媒体电子阅览室设座位100个，为读者提供光盘、影视资料及数据库等数字资源的检索与阅览.</string>
    <string name="zidonghuajianshe">成电图书馆是CALIS“中国高等学校数字图书馆联盟”22所发起馆之一，始终站在中国数字图书馆建设的前沿。依托CERNET，建成主干1G光纤的全交换式快速以太网，百兆到桌面；办公网络双网接入；2G光纤SAN网络存储架构，保障TB级的资源增长；完善的信息安全系统，保证7*24小时网络信息服务；采用了VPN技术提供读者远程访问；门户网站集成各种数字资源和服务；开通电子邮件和FTP文件传递系统；使用基于Compaq AlphaServer小型机和SYBASE数据库的图书馆自动化集成管理系统MELINETS，业务工作全面自动化。</string>
    <string name="wenxian">创建之初，汇集了当时的交通大学、南京工学院、华南工学院三所高校图书馆的电子类文献。经过五十年的不断积累和发展，已建立起一个以电子信息及相关学科领域文献为特色的馆藏体系。图书馆馆藏总量371.8万册，其中纸质文献193.2万册，数字文献178.6万册。网络学术资源系统36种，含140个数据库，包括INSPEC、EI、IEL、SPIE、Elsevier、EBSCO、SpringerLink、IOP、ACM、ABI、APS、AIP、PQDD-B、CNKI中国知识资源总库、维普全文期刊、超星数字图书等。同时，自建大量特色数据库，如：本校学位论文全文数据库、重点学科导航系统、西文电子期刊会议录导航系统、教学参考信息服务系统、成电人著作收藏库、馆藏光盘网上发布系统、“芝麻开门”机构知识库学术资源系统等。</string>
    <string name="tushuguanjianjie">电子科技大学图书馆创建于1956年，建筑面积16, 360平方米，阅览座位1400余座。馆设六部一室：数字资源部、采编部、系统技术部、信息咨询部、流通部、阅览部和办公室。</string>
    <string name="kewaikaoshi">无论从出国深造来讲还是从考研就业来看，课外的资格证书对于大学生都是多多益善。英语四、六级的证书在前边已经介绍了其重要性，在此我们不再赘言。计算机等级考试证书是成电学生相当重要的证书之一，成电的学生一般考的是C语言二级、三级等。对于准备出国的同学来讲GRE、TOFEL也是必须过的语言关，大多数本科生会选择在大二下半学期和大三挑战这些考试，复习的过程是漫长而枯燥的，但是成功的喜悦却是风雨彩虹后的幸福与满足。对于学有余力的同学当然还推荐ERP、CCNP、保险精算师等更具难度和实用性的资格认证。大学也可以考驾照，练一手好的驾驶技巧。路漫漫其修远兮，电子科大也一定可以为你提供一个展示和超越自我的平台。但希望大家不要为了得证书而考证书，我们应该学会在得到证书之后也同时证明自己又有了一门真本事，而不是单单的一个本子，一个寻找好的工作单位的敲门砖。望大学的学习能够让同学们体会到学无止境、乐在其中之感。</string>
    <string name="keyekaoshi">大学的成绩是结构化的成绩，所以其对应的考试方式也有所不同。一般来讲大学某门功课的成绩是由平时成绩、半期考试成绩、期末考试成绩加权计算而来。以100分为满分，平时成绩一般占10—20分，由出勤状况和平时作业情况决定；半期考试一般安排在第10周左右，占10—20分；期末考试一般安排在学期末，具体情况按学校教务处的安排确定，占60分左右。当然也有一些实验课程或者其他课程在具体分数计算上略有不同，但基本的结构化评分体系不会有变化。\n应试小技巧：以前同学们经历的是选拔性的考试，考试的目的是要淘汰一部分人，而大学里考试的目的是考核性考试，是要检查你到底学了没有，所以大学考试不会超过教学大纲和课本的范围，这也就大大减轻了我们复习的难度。建议大家一是上课要认真听讲，因为老师讲的往往是需要大家掌握并重点考察的内容；二是要做好平时作业，一般来讲考试题目的难度不会超过平时作业的难度；三就是考试之前通过研习以往的考题来进行查漏补缺的复习。</string>
    <string name="tieshi1">通过这么多年的学习，大家对考试一定不陌生了，不过大学的考试和大家之前所经历的考试有所不同，现在具体介绍如下，希望能为同学们应试提供必要帮助。</string>
    <string name="dianzishiyan">电子实验：这门课程是电路分析的实验课程，会教你使用一些新的实验仪器，每次实验的内容都很重要，所以同学们一定要做好预习的工作，在课堂上认认真真的听老师讲课，课后的复习也要做好，这是一门对预习复习要求最高的课程。</string>
    <string name="matlab">数学实验: 这是一门类似C语言的课程，它运用M语言去编写计算机可以识别的程序，会用到matlab软件，这门可以说是数学建模的基础，通过数学知识将实际问题转化数学模型，然后用数学方法通过M语言在matlab软件上将其解决。可以锻炼自己发散思维的能力，实际问题应用能力，对自己以后解决数学实际问题有很大用处。</string>
    <string name="jindaishi">中国近现代史纲要：大学生是祖国未来的社会主义建设者、各条战线的生力军。为了胜利地担负起建设祖国的责任，我们必须了解中国的国情，不仅要了解中国的今天，还应当了解中国的昨天和前天。对于我们来说，不论今后将从事何种专业工作，学习“中国近现代史纲要”课程，都是很必要的。</string>
    <string name="gongtu">现代工程制图：这门课其实很新颖很好玩，很像儿时的美术课，老师教画的方法，同学在下面模仿学习，只要认真学，这门课还是很容易拿高分的，不仅如此，这门课的老师也会教给大家一个很不错的绘图软件AUTOCAD，希望大家认真学习，这个软件在今后绘制电路图和零件图时都可以帮上大忙。</string>
    <string name="dawu">大学物理：这门课和电路分析的学习方法类似，在其中会有许多高等数学的概念，一定要试着去接受并且运用这些思想，他们是建立在高等数学的基础上来解决大学物理，所以无论是在定理的描述还是具体的解题方法上都和高中所学有很大的不同。所以大家一定要重视这门课的学习思维，多联系题目去尝试自己的思想，作业定要按时完成。</string>
    <string name="dianfen">电路分析：这门课程源于高中物理中的电路又不同于它，大家一定要注意吸收这些新的方法和思路，可能开始你不习惯，觉得高中的办法也可以，但是随着课程的深入你便会发现这样的一些思维模式、思考方法形成以后，学习后续的内容将得心应手，因此大家应该从开始就要接受好，多联系，让新的思想融入自己的思维中。</string>
    <string name="sixiu">思想道德修养与法律基础：要学做事，先学做人，学校该课程的老师都是心理学、教育学方面的专家，大家除了在课堂上学到许多法律的常识、做人的原则、交友的方法外，也很容易在课下和老师成为好朋友，常常会在思想上有意外的收获和成长。</string>
    <string name="tiyu">体育课：每周都只有一节大课，每学期有一个学分。但是身体是本钱，要成为国家栋梁的学弟学妹们千万不要放弃锻炼身体。大一上学期的体育课，大家主要学习太极拳，另外也要考长跑——男生2000米、女生1500米。大一下学期可以选择不同的科目，如足球，篮球，排球等。此外，也建议大家每天下午能出来慢跑百米，既锻炼身体又能释放压力。</string>
    <string name="cyuyan">C语言：作为编程入门的语言，许多学院都将开设这门课程。它带给你的不仅仅是一些计算机领域的基本规范和常识，更重要的是那些全新的思维模式与思考方法。所以上课跟随老师就是重中之重，因为你之前没有接触过它，另外好好利用上机时间去实践自己的理论，还有如果学有余力就多看看相关的书，多读别人写的程序，也会有很大收获的。</string>
    <string name="xiandai">线性代数：这门课程是大家的新朋友，也许大家在刚开始学习时会感到很难入门，只要你坚持上课认真听，多问多交流并学会总结，笔记一定要做好，因为内容中有好多的定理，需要大家掌握熟练之后才能运用自如，并会为之后其他课程奠定基础。</string>
    <string name="yingyu">英语：国际化的中国需要国际化的教育，成电作为一所国内领先的工科院校自然不落人后。大一的外语课程设置为一周两大节，一节主要进行大班（90人以上）精读训练；另一节主要是小班（30人左右）听说训练，让大家摆脱考试的压力，真正开始学英语，用英语。</string>
    <string name="weijifen">微积分：微积分其在高等数学中的重要性就好比初等数学中的加、减、乘、除一般，并且以后很多课程都以微积分为基础。同学们应上课认真听老师授课，可以把老师的课件拷回去多加复习，作为自己的笔记，并在课后按时完成相应练习题。微积分的学习重在平时，但考试之前的复习也十分重要，同学们要把握好时间。</string>
    <string name="xuebazhuyi">大学学什么？怎么学？这恐怕是新生们问的最多的问题，现在我们就大一学年的重要课程介绍如下，希望能为同学们制定好的学习计划，做好各方面准备提供一定帮助。</string>
</resources>