<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/zhinanbeijing"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:onClick="tojieshao"
            android:background="@mipmap/icon_detail_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="出行指南"
            style="@style/style_title"
            android:textSize="20sp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />
    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="0.9">
        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <View
                    android:layout_gravity="center_vertical"
                    android:background="#36648B"
                    android:layout_width="6dp"
                    android:layout_height="30dp" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    style="@style/style_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="公交路线:" />
            </LinearLayout>
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="周边路线"
                android:text="@string/zhoubianluxian"
                style="@style/zhinanstyle" />
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:tag="市内车站"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/shineichezhan"
                style="@style/zhinanstyle" />
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:tag="市内高校"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/shineigaoxiao"
                style="@style/zhinanstyle" />
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:tag="市内景点"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/shinejingdian"
                style="@style/zhinanstyle" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <View
                    android:layout_gravity="center_vertical"
                    android:background="#36648B"
                    android:layout_width="6dp"
                    android:layout_height="30dp" />
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    style="@style/style_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="成灌快铁" />
            </LinearLayout>
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:tag="成都到青城山"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/qingchenshan"
                style="@style/zhinanstyle" />
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:tag="成都到都江堰"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/dujiangyan"
                style="@style/zhinanstyle" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="396时刻表"
                style="@style/style_subtitle"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:onClick="ShiKe"
                android:src="@mipmap/shikebiao"/>
            <com.exe.feife.wzkd2.wzkd.ui.view.ZhanKaiTextView
                android:tag="特别声明："
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/zhuyi"
                style="@style/zhinanstyle" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>